<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KankerServiks" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000090"
        android:textSize="20dp"
        android:text="MENU UTAMA"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnKanker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="#000099"
        android:text="@string/btnInfo" />

    <Button
        android:id="@+id/btnKanker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNama"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/btnKanker"
        android:textColor="#000099" />

    <Button
        android:id="@+id/btnTentang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/btnTentang"
        android:textColor="#000099" />

    <EditText
        android:id="@+id/txtNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnInfo"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="42dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtNama"
        android:layout_alignBottom="@+id/txtNama"
        android:layout_toLeftOf="@+id/btnKanker"
        android:text="Nama :" />

    <Button
        android:id="@+id/btnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnTentang"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/btnOff"
        android:textColor="#990000" />

</RelativeLayout>