<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Diagnosa Stadium 2" />

    <TextView
        android:id="@+id/txtNamaStd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="18dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtNamaStd"
        android:layout_marginTop="21dp"
        android:text="1. Apakah anda setiap berhubungan seks berdarah (Contact Bleeding)?"
        android:textSize="12dp" />

    <CheckBox
        android:id="@+id/yaS21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:text="@string/yaS21" />

    <CheckBox
        android:id="@+id/yaS22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:text="@string/yaS22" />

    <CheckBox
        android:id="@+id/yaS23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:text="@string/yaS23" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/yaS21"
        android:layout_marginTop="14dp"
        android:text="2. Apakah anda mengidap keputihan gatal dan berbau?"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/yaS22"
        android:layout_marginTop="14dp"
        android:text="3. Apakah anda merasa nyeri saat berhubungan sex?"
        android:textSize="12dp" />

    <Button
        android:id="@+id/lanjutStd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yaS23"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/lanjutStd" />

</RelativeLayout>